--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -8,36 +8,39 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
+<BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
    <left>
-      <AnchorPane prefHeight="400.0" prefWidth="145.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="600.0" prefWidth="199.0" BorderPane.alignment="CENTER">
          <children>
-            <JFXButton fx:id="_practiceSelectedButton" layoutX="-1.0" layoutY="360.0" onAction="#practiceSelectedClicked" prefHeight="38.0" prefWidth="146.0" text="Practice Selected" />
-            <JFXButton fx:id="_practiceAllButton" buttonType="RAISED" layoutX="1.0" layoutY="360.0" onAction="#practiceAllClicked" prefHeight="39.0" prefWidth="146.0" text="Practice All" />
-            <JFXTreeTableView layoutX="-1.0" layoutY="1.0" prefHeight="357.0" prefWidth="148.0" />
+            <JFXButton fx:id="_practiceSelectedButton" layoutX="-1.0" layoutY="558.0" onAction="#practiceSelectedClicked" prefHeight="46.0" prefWidth="204.0" text="Practice Selected" />
+            <JFXButton fx:id="_practiceAllButton" buttonType="RAISED" layoutX="2.0" layoutY="556.0" onAction="#practiceAllClicked" prefHeight="49.0" prefWidth="199.0" text="Practice All" />
+            <JFXTreeTableView layoutX="-1.0" layoutY="1.0" prefHeight="556.0" prefWidth="202.0" />
          </children>
       </AnchorPane>
    </left>
    <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="600.0" prefWidth="735.0" BorderPane.alignment="CENTER">
          <children>
-            <JFXTextField fx:id="_nameTextField" layoutX="67.0" layoutY="98.0" prefHeight="34.0" prefWidth="285.0" promptText="John Doe" />
-            <Label layoutX="67.0" layoutY="34.0" prefHeight="45.0" prefWidth="218.0" text="Type in a Name">
+            <JFXTextField fx:id="_nameTextField" layoutX="126.0" layoutY="169.0" prefHeight="68.0" prefWidth="408.0" promptText="John Doe">
                <font>
-                  <Font size="18.0" />
+                  <Font size="24.0" />
+               </font></JFXTextField>
+            <Label layoutX="126.0" layoutY="64.0" prefHeight="70.0" prefWidth="350.0" text="Type in a Name">
+               <font>
+                  <Font size="48.0" />
                </font>
             </Label>
-            <JFXButton fx:id="_addToListButton" buttonType="RAISED" layoutX="171.0" layoutY="200.0" onAction="#addToListClicked" prefHeight="49.0" prefWidth="110.0" text="Add to List">
+            <JFXButton fx:id="_addToListButton" buttonType="RAISED" layoutX="330.0" layoutY="370.0" onAction="#addToListClicked" prefHeight="49.0" prefWidth="110.0" text="Add to List">
                <font>
                   <Font size="18.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="_uploadButton" buttonType="RAISED" layoutX="67.0" layoutY="310.0" onAction="#uploadClicked" prefHeight="56.0" prefWidth="106.0" text="Upload">
+            <JFXButton fx:id="_uploadButton" buttonType="RAISED" layoutX="126.0" layoutY="474.0" onAction="#uploadClicked" prefHeight="76.0" prefWidth="150.0" text="Upload">
                <font>
                   <Font size="18.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="_practiceButton" buttonType="RAISED" layoutX="297.0" layoutY="200.0" onAction="#practiceClicked" prefHeight="49.0" prefWidth="110.0" text="Practice">
+            <JFXButton fx:id="_practiceButton" buttonType="RAISED" layoutX="440.0" layoutY="370.0" onAction="#practiceClicked" prefHeight="49.0" prefWidth="110.0" text="Practice">
                <font>
                   <Font size="18.0" />
                </font>
