--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -3,7 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXProgressBar?>
 <?import com.jfoenix.controls.JFXSlider?>
-<?import com.jfoenix.controls.JFXTreeTableView?>
+<?import com.jfoenix.controls.JFXTreeView?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -25,7 +25,6 @@
             <Font size="36.0" />
          </font>
       </JFXButton>
-      <JFXTreeTableView fx:id="_recordinglist" layoutX="535.0" layoutY="150.0" prefHeight="330.0" prefWidth="270.0" />
       <JFXButton fx:id="_playRecordngButton" buttonType="RAISED" layoutX="536.0" layoutY="512.0" onAction="#playRecordingClicked" prefHeight="36.0" prefWidth="119.0" text="Play Recording">
          <font>
             <Font size="14.0" />
@@ -51,5 +50,6 @@
          </font>
       </JFXButton>
       <JFXProgressBar fx:id="_micSensitivityBar" layoutX="134.0" layoutY="526.0" />
+      <JFXTreeView fx:id="_recordinglist" layoutX="549.0" layoutY="150.0" prefHeight="340.0" prefWidth="241.0" />
    </children>
 </AnchorPane>
