--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -12,8 +12,7 @@
    <left>
       <AnchorPane prefHeight="600.0" prefWidth="199.0" BorderPane.alignment="CENTER">
          <children>
-            <JFXButton fx:id="_practiceSelectedButton" layoutX="-1.0" layoutY="558.0" onAction="#practiceSelectedClicked" prefHeight="46.0" prefWidth="204.0" text="Practice Selected" />
-            <JFXButton fx:id="_practiceAllButton" buttonType="RAISED" layoutX="2.0" layoutY="556.0" onAction="#practiceAllClicked" prefHeight="49.0" prefWidth="199.0" text="Practice All" />
+            <JFXButton fx:id="_practiceListButton" buttonType="RAISED" layoutX="2.0" layoutY="556.0" onAction="#practiceListClicked" prefHeight="49.0" prefWidth="199.0" text="Practice All" />
             <JFXTreeTableView layoutX="-1.0" layoutY="1.0" prefHeight="556.0" prefWidth="202.0" />
          </children>
       </AnchorPane>
