started implementing play buttons

--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
    <children>
-      <Label fx:id="_currentName" layoutX="68.0" layoutY="72.0" prefHeight="112.0" prefWidth="334.0" text="Practice Names" textAlignment="CENTER">
+      <Label fx:id="_currentName" layoutX="68.0" layoutY="72.0" prefHeight="112.0" prefWidth="334.0" text="Practice Names" textAlignment="JUSTIFY">
          <font>
             <Font size="48.0" />
          </font>
@@ -33,7 +33,7 @@
          <font>
             <Font size="14.0" />
          </font></JFXButton>
-      <JFXSlider fx:id="_volumnSlider" blockIncrement="1.0" layoutX="151.0" layoutY="279.0" onDragDetected="#volumnSliderDragged" prefHeight="14.0" prefWidth="168.0" value="30.0" />
+      <JFXSlider fx:id="_volumeSlider" blockIncrement="1.0" layoutX="151.0" layoutY="279.0" onDragDetected="#volumeSliderDragged" prefHeight="14.0" prefWidth="168.0" value="30.0" />
       <JFXSlider fx:id="_micSensitivitySlider" layoutX="151.0" layoutY="448.0" onDragDetected="#micSensitivityDragged" prefHeight="14.0" prefWidth="168.0" value="40.0" />
       <JFXButton fx:id="_prevButton" buttonType="RAISED" layoutX="415.0" layoutY="512.0" onAction="#prevClicked" prefHeight="36.0" prefWidth="85.0" text="Previous">
          <font>
