--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
    <children>
-      <Label fx:id="_currentName" layoutX="68.0" layoutY="72.0" prefHeight="112.0" prefWidth="334.0" text="Practice Names" textAlignment="JUSTIFY">
+      <Label fx:id="_currentName" alignment="CENTER" layoutX="68.0" layoutY="72.0" prefHeight="112.0" prefWidth="334.0" text="Name">
          <font>
             <Font size="48.0" />
          </font>
@@ -20,7 +20,7 @@
             <Font size="36.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="_recordButton" buttonType="RAISED" layoutX="586.0" layoutY="72.0" onAction="#recordClicked" prefHeight="36.0" prefWidth="168.0" text="Record">
+      <JFXButton fx:id="_recordButton" buttonType="RAISED" layoutX="549.0" layoutY="72.0" onAction="#recordClicked" prefHeight="78.0" prefWidth="242.0" text="Record">
          <font>
             <Font size="36.0" />
          </font>
