--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTabPane?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXTreeView?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
@@ -14,6 +17,20 @@
          <children>
             <JFXButton fx:id="_practiceListButton" buttonType="RAISED" layoutX="2.0" layoutY="556.0" onAction="#practiceListClicked" prefHeight="49.0" prefWidth="199.0" text="Practice All" />
             <JFXTreeView fx:id="_practiceList" layoutX="1.0" prefHeight="555.0" prefWidth="200.0" />
+            <JFXTabPane layoutX="1.0" prefHeight="554.0" prefWidth="198.0">
+               <tabs>
+                  <Tab text="Database ">
+                     <content>
+                        <Pane fx:id="_databaseListPane" prefHeight="200.0" prefWidth="200.0" />
+                     </content>
+                  </Tab>
+                  <Tab text="Custom List">
+                     <content>
+                        <Pane fx:id="_customListPane" prefHeight="200.0" prefWidth="200.0" />
+                     </content>
+                  </Tab>
+               </tabs>
+            </JFXTabPane>
          </children>
       </AnchorPane>
    </left>
