--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -25,17 +25,17 @@
             <Font size="36.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="_playRecordngButton" buttonType="RAISED" layoutX="536.0" layoutY="512.0" onAction="#playRecordingClicked" prefHeight="36.0" prefWidth="119.0" text="Play Recording">
+      <JFXButton fx:id="_playRecordingButton" buttonType="RAISED" layoutX="536.0" layoutY="512.0" onAction="#playRecordingClicked" prefHeight="36.0" prefWidth="119.0" text="Play Recording">
          <font>
             <Font size="14.0" />
          </font></JFXButton>
-      <JFXButton fx:id="_saveButton" buttonType="RAISED" layoutX="684.0" layoutY="512.0" onAction="#saveClicked" prefHeight="36.0" prefWidth="69.0" text="Save">
+      <JFXButton fx:id="_saveButton" buttonType="RAISED" layoutX="670.0" layoutY="512.0" onAction="#saveClicked" prefHeight="36.0" prefWidth="69.0" text="Save">
          <font>
             <Font size="14.0" />
          </font></JFXButton>
       <JFXSlider fx:id="_volumeSlider" blockIncrement="1.0" layoutX="151.0" layoutY="279.0" onDragDetected="#volumeSliderDragged" prefHeight="14.0" prefWidth="168.0" value="30.0" />
       <JFXSlider fx:id="_micSensitivitySlider" layoutX="151.0" layoutY="448.0" onDragDetected="#micSensitivityDragged" prefHeight="14.0" prefWidth="168.0" value="40.0" />
-      <JFXButton fx:id="_prevButton" buttonType="RAISED" layoutX="415.0" layoutY="512.0" onAction="#prevClicked" prefHeight="36.0" prefWidth="85.0" text="Previous">
+      <JFXButton fx:id="_prevButton" buttonType="RAISED" layoutX="55.0" layoutY="195.0" onAction="#prevClicked" prefHeight="36.0" prefWidth="85.0" text="Previous">
          <font>
             <Font size="14.0" />
          </font></JFXButton>
@@ -44,12 +44,17 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <JFXButton fx:id="_nextButton" buttonType="RAISED" layoutX="762.0" layoutY="506.0" onAction="#nextClicked" prefHeight="47.0" prefWidth="99.0" text="Next">
+      <JFXButton fx:id="_nextButton" buttonType="RAISED" layoutX="319.0" layoutY="189.0" onAction="#nextClicked" prefHeight="47.0" prefWidth="99.0" text="Next">
          <font>
             <Font size="14.0" />
          </font>
       </JFXButton>
       <JFXProgressBar fx:id="_micSensitivityBar" layoutX="134.0" layoutY="526.0" />
       <JFXTreeView fx:id="_recordinglist" layoutX="549.0" layoutY="150.0" prefHeight="340.0" prefWidth="241.0" />
+      <JFXButton fx:id="_deleteButton" buttonType="RAISED" layoutX="740.0" layoutY="512.0" onAction="#deleteClicked" prefHeight="36.0" prefWidth="69.0" text="Delete">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
