--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -2,7 +2,6 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTabPane?>
-<?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXTreeView?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
@@ -10,8 +9,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+<?import org.controlsfx.control.textfield.CustomTextField?>
 
-<BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
+<BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
    <left>
       <AnchorPane prefHeight="600.0" prefWidth="199.0" BorderPane.alignment="CENTER">
          <children>
@@ -37,10 +37,6 @@
    <center>
       <AnchorPane prefHeight="600.0" prefWidth="735.0" BorderPane.alignment="CENTER">
          <children>
-            <JFXTextField fx:id="_nameTextField" layoutX="126.0" layoutY="169.0" onAction="#searching" prefHeight="68.0" prefWidth="408.0" promptText="John Doe">
-               <font>
-                  <Font size="24.0" />
-               </font></JFXTextField>
             <Label layoutX="126.0" layoutY="64.0" prefHeight="70.0" prefWidth="350.0" text="Type in a Name">
                <font>
                   <Font size="48.0" />
@@ -61,6 +57,7 @@
                   <Font size="18.0" />
                </font>
             </JFXButton>
+            <CustomTextField fx:id="_nameTextField" layoutX="134.0" layoutY="168.0" prefHeight="38.0" prefWidth="410.0" />
          </children>
       </AnchorPane>
    </center>
