--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -19,10 +19,11 @@
                <tabs>
                   <Tab text="Practice List">
                      <content>
-                        <Pane fx:id="_practiceListPane" prefHeight="200.0" prefWidth="198.0">
+                        <Pane prefHeight="453.0" prefWidth="198.0">
                            <children>
-                              <JFXButton fx:id="_practiceListButton" buttonType="RAISED" layoutY="519.0" onAction="#practiceListClicked" prefHeight="49.0" prefWidth="200.0" text="Practice All" />
-                              <JFXCheckBox fx:id="_practiseFileSelectAllPractiseFileCheckBox" layoutY="501.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="198.0" text="Select All" />
+                              <JFXButton fx:id="_practiceListButton" buttonType="RAISED" layoutY="518.0" onAction="#practiceListClicked" prefHeight="48.0" prefWidth="200.0" text="Practice All" />
+                              <JFXCheckBox fx:id="_practiseFileSelectAllPractiseFileCheckBox" layoutX="1.0" layoutY="507.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="198.0" text="Select All" />
+                              <Pane fx:id="_practiceListPane" prefHeight="499.0" prefWidth="200.0" />
                            </children></Pane>
                      </content>
                   </Tab>
