--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -22,7 +22,7 @@
                         <Pane prefHeight="453.0" prefWidth="280.0">
                            <children>
                               <JFXButton fx:id="_practiceListButton" buttonType="RAISED" layoutY="518.0" onAction="#practiceListClicked" prefHeight="48.0" prefWidth="200.0" text="Practice All" />
-                              <JFXCheckBox fx:id="_practiseFileSelectAllPractiseFileCheckBox" layoutX="1.0" layoutY="507.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="198.0" text="Select All" />
+                              <JFXCheckBox fx:id="_practiseFileSelectAllPractiseFileCheckBox" layoutX="1.0" layoutY="507.0" mnemonicParsing="false" onAction="#selectAllPractiseFileCheckBox" prefHeight="22.0" prefWidth="198.0" text="Select All" />
                               <Pane fx:id="_practiceListPane" prefHeight="499.0" prefWidth="200.0" />
                            </children></Pane>
                      </content>
