--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -21,9 +21,13 @@
                      <content>
                         <Pane prefHeight="453.0" prefWidth="280.0">
                            <children>
-                              <JFXButton fx:id="_practiceListButton" buttonType="RAISED" layoutY="518.0" onAction="#practiceListClicked" prefHeight="48.0" prefWidth="200.0" text="Practice All" />
-                              <JFXCheckBox fx:id="_practiseFileSelectAllPractiseFileCheckBox" layoutX="1.0" layoutY="507.0" mnemonicParsing="false" onAction="#selectAllPractiseFileCheckBox" prefHeight="22.0" prefWidth="198.0" text="Select All" />
-                              <Pane fx:id="_practiceListPane" prefHeight="499.0" prefWidth="200.0" />
+                              <AnchorPane prefHeight="568.0" prefWidth="289.0">
+                                 <children>
+                                    <AnchorPane fx:id="_practiceListPane" prefHeight="502.0" prefWidth="290.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                    <JFXButton fx:id="_practiceListButton" buttonType="RAISED" layoutX="4.0" layoutY="524.0" onAction="#practiceListClicked" prefHeight="48.0" prefWidth="286.0" text="Practice All" />
+                                    <JFXCheckBox fx:id="_practiseFileSelectAllPractiseFileCheckBox" layoutX="1.0" layoutY="504.0" mnemonicParsing="false" onAction="#selectAllPractiseFileCheckBox" prefHeight="22.0" prefWidth="284.0" text="Select All" />
+                                 </children>
+                              </AnchorPane>
                            </children></Pane>
                      </content>
                   </Tab>
@@ -38,7 +42,7 @@
       </AnchorPane>
    </left>
    <center>
-      <AnchorPane prefHeight="600.0" prefWidth="735.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="600.0" prefWidth="625.0" BorderPane.alignment="CENTER">
          <children>
             <Label layoutX="126.0" layoutY="64.0" prefHeight="70.0" prefWidth="350.0" text="Type in a Name">
                <font>
