--- a/src/sample/NameSayerFileElement.fxml
+++ b/src/sample/NameSayerFileElement.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane prefHeight="41.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.NameSayerFileElementController">
    <children>
-      <JFXCheckBox fx:id="_checkBox" checkedColor="#10439c" layoutX="14.0" layoutY="6.0" prefHeight="36.0" prefWidth="200.0" text="CheckBox">
+      <JFXCheckBox fx:id="_checkBox" checkedColor="#10439c" layoutX="14.0" layoutY="6.0" text="CheckBox">
          <font>
             <Font size="15.0" />
          </font>
