--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -60,7 +60,7 @@
          <tabs>
             <Tab text="Recordings ">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane fx:id="_recordingList" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
               </content>
             </Tab>
          </tabs>
