--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.textfield.CustomTextField?>
 
-<BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
+<BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
    <left>
       <AnchorPane prefHeight="600.0" prefWidth="285.0" BorderPane.alignment="CENTER">
          <children>
@@ -44,7 +44,7 @@
       </AnchorPane>
    </left>
    <center>
-      <AnchorPane prefHeight="600.0" prefWidth="625.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="600.0" prefWidth="625.0" stylesheets="@ProjectStyleSheet.css" BorderPane.alignment="CENTER">
          <children>
             <Label layoutX="126.0" layoutY="64.0" prefHeight="70.0" prefWidth="350.0" text="Type in a Name">
                <font>
