--- a/src/application/ProjectStyleSheet.css
+++ b/src/application/ProjectStyleSheet.css
@@ -1,3 +1,46 @@
-.button{
-    -fx-background-color: antiquewhite;
+#_saveCurButton{
+    -fx-background-color: rgb(0, 255, 0, 0.2);
 }
+
+#_recordButton{
+	-fx-background-color: rgb(0, 255, 0, 0.2);
+}
+
+#_playCurButton {
+	-fx-background-color: rgb(0, 255, 0, 0.2);
+}
+
+#_deleteCurButton {
+	-fx-background-color: rgb(255, 0, 0, 0.2);
+}
+
+#_playSelectedButton {
+	-fx-background-color: rgb(0, 255, 0, 0.2);
+}
+
+#_deleteSelectedButton {
+	-fx-background-color: rgb(255, 0, 0, 0.2);
+}
+
+#_playButton {
+	-fx-background-color: rgb(0, 255, 0, 0.2);
+}
+
+#_nextButton {
+	-fx-background-color: rgb(200, 200, 200, 0.4);
+}
+
+#_prevButton {
+	-fx-background-color: rgb(200, 200, 200, 0.4);
+}
+
+#_recordingPane {
+	-fx-background-color: rgb(230, 230, 230);
+}
+
+
+
+
+
+
+
