--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -35,7 +35,16 @@
                   </Tab>
                   <Tab text="Recordings">
                      <content>
-                        <Pane fx:id="_recordingListPane" prefHeight="200.0" prefWidth="200.0" />
+                        <Pane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <AnchorPane prefHeight="567.0" prefWidth="285.0">
+                                 <children>
+                                    <AnchorPane fx:id="_recordingListPane" prefHeight="495.0" prefWidth="284.0" />
+                                    <JFXButton fx:id="_deleteUserRecording" layoutY="517.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="284.0" text="Delete Selected" />
+                                    <JFXCheckBox fx:id="_userRecordingCheckBox" layoutX="1.0" layoutY="508.0" mnemonicParsing="false" onAction="#selectAllUserRecordings" prefHeight="18.0" prefWidth="283.0" />
+                                 </children>
+                              </AnchorPane>
+                           </children></Pane>
                      </content>
                   </Tab>
                </tabs>
