--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -40,7 +40,7 @@
                               <AnchorPane prefHeight="567.0" prefWidth="285.0">
                                  <children>
                                     <AnchorPane fx:id="_recordingListPane" prefHeight="495.0" prefWidth="284.0" />
-                                    <JFXButton fx:id="_deleteUserRecording" layoutY="517.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="284.0" text="Delete Selected" />
+                                    <JFXButton fx:id="_deleteUserRecording" layoutY="517.0" mnemonicParsing="false" onAction="#deleteSelectedUserRecordings" prefHeight="49.0" prefWidth="284.0" text="Delete Selected" />
                                     <JFXCheckBox fx:id="_userRecordingCheckBox" layoutX="1.0" layoutY="508.0" mnemonicParsing="false" onAction="#selectAllUserRecordings" prefHeight="18.0" prefWidth="283.0" />
                                  </children>
                               </AnchorPane>
