--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -16,27 +16,27 @@
             <Font size="48.0" />
          </font>
       </Label>
-      <JFXButton fx:id="_playAllButton" buttonType="RAISED" layoutX="151.0" layoutY="171.0" onAction="#playAllClicked" prefHeight="84.0" prefWidth="168.0" text="Play">
+      <JFXButton id="_playButton" fx:id="_playAllButton" buttonType="RAISED" layoutX="151.0" layoutY="171.0" onAction="#playAllClicked" prefHeight="84.0" prefWidth="168.0" stylesheets="@ProjectStyleSheet.css" text="Play">
          <font>
             <Font size="36.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="_recordButton" buttonType="RAISED" layoutX="549.0" layoutY="72.0" onAction="#recordClicked" prefHeight="78.0" prefWidth="242.0" text="Record">
+      <JFXButton id="_recordButton" fx:id="_recordButton" buttonType="RAISED" layoutX="549.0" layoutY="72.0" onAction="#recordClicked" prefHeight="78.0" prefWidth="242.0" stylesheets="@ProjectStyleSheet.css" text="Record">
          <font>
             <Font size="36.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="_playRecordingButton" buttonType="RAISED" layoutX="466.0" layoutY="93.0" onAction="#playRecordingClicked" prefHeight="36.0" prefWidth="119.0" text="Play">
+      <JFXButton id="_playCurButton" fx:id="_playRecordingButton" buttonType="RAISED" layoutX="466.0" layoutY="93.0" onAction="#playRecordingClicked" prefHeight="36.0" prefWidth="119.0" stylesheets="@ProjectStyleSheet.css" text="Play">
          <font>
             <Font size="14.0" />
          </font></JFXButton>
-      <JFXButton fx:id="_saveButton" buttonType="RAISED" layoutX="595.0" layoutY="93.0" onAction="#saveClicked" prefHeight="36.0" prefWidth="119.0" text="Save">
+      <JFXButton id="_saveCurButton" fx:id="_saveButton" buttonType="RAISED" layoutX="595.0" layoutY="93.0" onAction="#saveClicked" prefHeight="36.0" prefWidth="119.0" stylesheets="@ProjectStyleSheet.css" text="Save">
          <font>
             <Font size="14.0" />
          </font></JFXButton>
       <JFXSlider fx:id="_volumeSlider" blockIncrement="1.0" layoutX="151.0" layoutY="279.0" onDragDone="#volumeSliderDragged" prefHeight="14.0" prefWidth="168.0" value="30.0" />
       <JFXSlider fx:id="_micSensitivitySlider" layoutX="151.0" layoutY="448.0" onDragDetected="#micSensitivityDragged" prefHeight="14.0" prefWidth="168.0" value="40.0" />
-      <JFXButton fx:id="_prevButton" buttonType="RAISED" layoutX="43.0" layoutY="195.0" onAction="#prevClicked" prefHeight="36.0" prefWidth="85.0" text="Previous">
+      <JFXButton id="_prevButton" fx:id="_prevButton" buttonType="RAISED" layoutX="43.0" layoutY="190.0" onAction="#prevClicked" prefHeight="47.0" prefWidth="85.0" stylesheets="@ProjectStyleSheet.css" text="Previous">
          <font>
             <Font size="14.0" />
          </font></JFXButton>
@@ -45,13 +45,13 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <JFXButton fx:id="_nextButton" buttonType="RAISED" layoutX="359.0" layoutY="189.0" onAction="#nextClicked" prefHeight="47.0" prefWidth="86.0" text="Next">
+      <JFXButton id="_nextButton" fx:id="_nextButton" buttonType="RAISED" layoutX="359.0" layoutY="189.0" onAction="#nextClicked" prefHeight="47.0" prefWidth="86.0" stylesheets="@ProjectStyleSheet.css" text="Next">
          <font>
             <Font size="14.0" />
          </font>
       </JFXButton>
       <JFXProgressBar fx:id="_micSensitivityBar" layoutX="134.0" layoutY="526.0" />
-      <JFXButton fx:id="_deleteButton" buttonType="RAISED" layoutX="731.0" layoutY="93.0" onAction="#deleteClicked" prefHeight="36.0" prefWidth="119.0" text="Delete">
+      <JFXButton id="_deleteCurButton" fx:id="_deleteButton" buttonType="RAISED" layoutX="731.0" layoutY="93.0" onAction="#deleteClicked" prefHeight="36.0" prefWidth="119.0" stylesheets="@ProjectStyleSheet.css" text="Delete">
          <font>
             <Font size="14.0" />
          </font>
@@ -60,17 +60,17 @@
          <tabs>
             <Tab text="Recordings ">
               <content>
-                <AnchorPane fx:id="_recordingList" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane id="_recordingPane" fx:id="_recordingList" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" stylesheets="@ProjectStyleSheet.css" />
               </content>
             </Tab>
          </tabs>
       </JFXTabPane>
-      <JFXButton fx:id="_playSelectedButton" buttonType="RAISED" layoutX="536.0" layoutY="519.0" onAction="#playSelectedClicked" prefHeight="36.0" prefWidth="119.0" text="Play Selected ">
+      <JFXButton id="_playSelectedButton" fx:id="_playSelectedButton" buttonType="RAISED" layoutX="536.0" layoutY="519.0" onAction="#playSelectedClicked" prefHeight="36.0" prefWidth="119.0" stylesheets="@ProjectStyleSheet.css" text="Play Selected ">
          <font>
             <Font size="14.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="_deleteSelectedButton" buttonType="RAISED" layoutX="688.0" layoutY="519.0" onAction="#deleteSelectedClicked" prefHeight="36.0" prefWidth="119.0" text="Delete Selected">
+      <JFXButton id="_deleteSelectedButton" fx:id="_deleteSelectedButton" buttonType="RAISED" layoutX="688.0" layoutY="519.0" onAction="#deleteSelectedClicked" prefHeight="36.0" prefWidth="119.0" stylesheets="@ProjectStyleSheet.css" text="Delete Selected">
          <font>
             <Font size="14.0" />
          </font>
