--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -54,7 +54,7 @@
       </AnchorPane>
    </left>
    <center>
-      <AnchorPane prefHeight="600.0" prefWidth="625.0" stylesheets="@ProjectStyleSheet.css" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="600.0" prefWidth="625.0" BorderPane.alignment="CENTER">
          <children>
             <Label layoutX="126.0" layoutY="64.0" prefHeight="70.0" prefWidth="350.0" text="Type in a Name">
                <font>
