--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -17,7 +17,7 @@
    <left>
       <AnchorPane prefHeight="600.0" prefWidth="285.0" BorderPane.alignment="CENTER">
          <children>
-            <JFXTabPane layoutX="1.0" prefHeight="600.0" prefWidth="284.0">
+            <JFXTabPane id="_tabParent" layoutX="1.0" prefHeight="600.0" prefWidth="284.0" stylesheets="@SelectionSceneStyleSheet.css">
                <tabs>
                   <Tab text="Practice List">
                      <content>
