--- a/src/application/SelectionSceneStyleSheet.css
+++ b/src/application/SelectionSceneStyleSheet.css
@@ -3,11 +3,11 @@
 }
 
 #_addToListButton {
-	-fx-background-color: rgb(0, 0, 255, 0.4);
+	-fx-background-color: rgba(218, 198, 175, 0.4);
 }
 
 #_uploadButton {
-	-fx-background-color: rgb(0, 0, 255, 0.4);
+	-fx-background-color: rgba(218, 198, 175, 0.4);
 }
 
 #_pracSelButton {
@@ -44,4 +44,18 @@
 
 #_tabAnchorPane {
 	-fx-background-color: rgb(230, 122, 119);
+}
+
+.jfx-tab-pane:top .depth-container .tab-header-area .headers-region .tab-selected-line {
+	-fx-background-color: green;
+}
+
+.jfx-tab-pane .headers-region
+{
+	-fx-background-color: cornflowerblue;
+}
+
+.jfx-tab-pane .tab-header-background
+{
+	-fx-background-color: cornflowerblue;
 }
